--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizMeLikeYouMeanIt">
         <activity
+            android:name=".question.QuestionActivity"
+            android:exported="false" />
+        <activity
             android:name=".dashboard.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
