--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizMeLikeYouMeanIt">
         <activity
-            android:name=".question.QuestionActivity"
+            android:name=".scoreactivity.ScoreActivity"
             android:exported="false" />
         <activity
-            android:name=".dashboard.MainActivity"
+            android:name=".questionactivity.QuestionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".dashboardactivity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.QuizMeLikeYouMeanIt">
